--- a/src/main/resources/templates/admin/attendance.html
+++ b/src/main/resources/templates/admin/attendance.html
@@ -89,7 +89,16 @@
                             <button class="btn btn-info" id="downloadExcel">Download as Excel</button>
                         </div>
 
-                        <!-- Attendance Table -->
+                        <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
+                            <span th:text="${success}"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+
+                        <!-- Error Message -->
+                        <div th:if="${error}" class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <span th:text="${error}"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                         <div class="table-responsive">
                             <h5 class="card-title mt-4">Intern Attendance Details</h5>
                             <table class="table table-bordered" id="attendanceTable">
