--- a/src/main/resources/templates/admin/allocate_guide.html
+++ b/src/main/resources/templates/admin/allocate_guide.html
@@ -114,67 +114,84 @@
 
 	<div class="form-container active" id="form1">
 		<div class="container mt-3 mb-5 p-5 border shadow">
-			<!-- Iterate over groups to generate collapsible sections -->
-			<div th:each="groups : ${alloactedGroups}">
-				<div class="collapsible bg-primary text-white"
-					 data-toggle="collapse" th:data-target="'#group_' + ${groups.id}">
-					<table class="table table-striped table-bordered">
-						<tr class="hover-element">
-							<th><i class="fa-solid fa-chevron-down"></i></th>
-							<th>Group ID: <a
-									th:href="@{'/bisag/admin/allocate_guide/' + ${groups.groupId}}"><span
-									th:text="${groups.groupId}"></span></a></th>
-							<th>Domain: <span th:text="${groups.domain}"></span></th>
-							<th>Guide: <span th:text="${groups.guide.name}"></span></th>
-							<th>
-								<div>
-									<a
-											th:href="@{'/bisag/admin/allocate_guide/' + ${groups.groupId}}"
-											class="btn"> <i class="fa-solid fa-circle-info"></i>
+			<!-- Container for group blocks -->
+			<div id="allocated-group-container">
+				<div th:each="groups : ${alloactedGroups}" class="group-block" th:attr="data-group-id=${groups.groupId}">
+					<div class="collapsible bg-primary text-white"
+						 data-toggle="collapse" th:data-target="'#group_' + ${groups.id}">
+						<table class="table table-striped table-bordered">
+							<tr class="hover-element">
+								<th><i class="fa-solid fa-chevron-down"></i></th>
+								<th>Group ID: <a
+										th:href="@{'/bisag/admin/allocate_guide/' + ${groups.groupId}}"><span
+										th:text="${groups.groupId}"></span></a></th>
+								<th>Domain: <span th:text="${groups.domain}"></span></th>
+								<th>Guide: <span th:text="${groups.guide.name}"></span></th>
+								<th>
+									<div>
+										<a th:href="@{'/bisag/admin/allocate_guide/' + ${groups.groupId}}" class="btn">
+											<i class="fa-solid fa-circle-info"></i>
+										</a>
+									</div>
+								</th>
+							</tr>
+						</table>
+					</div>
+
+					<div class="content collapse" th:id="'group_' + ${groups.id}">
+						<table class="table table-bordered">
+							<thead>
+							<tr>
+								<th>ID</th>
+								<th>Full Name</th>
+								<th>Email</th>
+								<th>Details</th>
+							</tr>
+							</thead>
+							<tbody>
+							<!-- Iterate over interns and display those associated with the current group -->
+							<tr th:each="intern : ${interns}" th:if="${intern.group.id == groups.id}">
+								<td>
+									<a th:href="@{'/bisag/admin/intern/' + ${intern.internId}}">
+										<span th:text="${intern.internId}"></span>
 									</a>
-								</div>
-							</th>
-						</tr>
-					</table>
-
-				</div>
-
-
-
-
-				<div class="content collapse" th:id="'group_' + ${groups.id}">
-					<table class="table table-bordered">
-						<thead>
-						<tr>
-							<th>ID</th>
-							<th>Full Name</th>
-<!--							<th>Last Name</th>-->
-							<th>Email</th>
-							<th>Details</th>
-						</tr>
-						</thead>
-						<tbody>
-						<!-- Iterate over interns and display those associated with the current group -->
-						<tr th:each="intern : ${interns}"
-							th:if="${intern.group.id == groups.id}">
-							<td><a
-									th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"><span
-									th:text="${intern.internId}"></span></a></td>
-							<td th:text="${intern.firstName}"></td>
-<!--							<td th:text="${intern.lastName}"></td>-->
-							<td th:text="${intern.email}"></td>
-							<td><div>
-								<a th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"
-								   class="btn"><i class="fa-solid fa-circle-info"></i></a>
-							</div></td>
-						</tr>
-						</tbody>
-					</table>
+								</td>
+								<td th:text="${intern.firstName}"></td>
+								<td th:text="${intern.email}"></td>
+								<td>
+									<div>
+										<a th:href="@{'/bisag/admin/intern/' + ${intern.internId}}" class="btn">
+											<i class="fa-solid fa-circle-info"></i>
+										</a>
+									</div>
+								</td>
+							</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
+	<!-- JavaScript to sort group-blocks by groupId in descending order -->
+	<script>
+		window.addEventListener("load", function () {
+			const container = document.getElementById("allocated-group-container");
+			const groupBlocks = Array.from(container.getElementsByClassName("group-block"));
+
+			groupBlocks.sort((a, b) => {
+				const aId = a.getAttribute("data-group-id");
+				const bId = b.getAttribute("data-group-id");
+
+				// Sort in descending order using localeCompare with numeric
+				return bId.localeCompare(aId, undefined, { numeric: true, sensitivity: 'base' });
+			});
+
+			// Append the sorted blocks back to the container
+			groupBlocks.forEach(block => container.appendChild(block));
+		});
+	</script>
 
 	<div class="form-container" id="form2">
 		<div class="container mt-3 mb-5 p-5 border shadow">
