--- a/src/main/resources/templates/admin/generate_credentials.html
+++ b/src/main/resources/templates/admin/generate_credentials.html
@@ -27,7 +27,8 @@
             </ol>
         </nav>
     </div>
-
+    <div class="alert alert-success" th:if="${success}" th:text="${success}"></div>
+    <div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
     <section class="section">
         <div class="card">
             <div class="card-body form-container">
