--- a/src/main/resources/templates/admin/group_members.html
+++ b/src/main/resources/templates/admin/group_members.html
@@ -4,44 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Leave Application History</title>
 
+  <title>Group Members</title>
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
-
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <style>
-    body {
-      display: block;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    a {
-      text-decoration: none;
-      color: white;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-      margin-top: 20px;
-    }
-
-    th, td {
-      border: 1px solid #ddd;
-      text-align: center;
-    }
-
     .table th {
       cursor: pointer;
       background-image: url('default-icon.png');
@@ -62,12 +36,13 @@
 <div th:replace="fragments/asideFragment :: aside"></div>
 
 <main id="main" class="main">
+
   <div class="pagetitle">
-    <h1>Leave Application History</h1>
+    <h1>Group Members</h1>
     <nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/bisag/admin/pending_leaves}">Leaves</a></li>
-        <li class="breadcrumb-item active">Leave History</li>
+        <li class="breadcrumb-item">Intern</li>
+        <li class="breadcrumb-item active">Group: <span th:text="${groupId}"></span></li>
       </ol>
     </nav>
   </div>
@@ -75,48 +50,33 @@
   <section class="section">
     <div class="row">
       <div class="col-lg-12">
-        <input type="text" class="mb-4 form-control" id="searchInput" placeholder="Search...">
+        <input type="text" class="mb-4" id="searchInput" placeholder="Search..." />
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">List of Approved & Rejected Leave Applications</h5>
-            <a href="/bisag/admin/half_leave" class="btn btn-primary">
-              Half-Day Leaves
-            </a>
-            <table class="table table-bordered">
+            <h5 class="card-title" th:text="'List of Interns in Group ' + ${groupId}"></h5>
+            <table class="table datatable table-bordered">
               <thead>
               <tr>
-                <th>ID</th>
-                <th>Intern ID</th>
-                <th>Intern Name</th>
-                <th>Leave Type</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Subject</th>
-                <th>Guide Approval</th>
-                <th>Admin Approval</th>
-                <th>Reason of Rejection</th>
-                <th>Status</th>
+                <th><i class="fa-solid fa-sort mx-2"></i>Intern ID</th>
+                <th><i class="fa-solid fa-sort mx-2"></i>Name</th>
+                <th><i class="fa-solid fa-sort mx-2"></i>Email</th>
+                <th><i class="fa-solid fa-sort mx-2"></i>Contact</th>
               </tr>
               </thead>
               <tbody>
-              <tr th:each="leave : ${leaveHistory}">
-                <td th:text="${leave.id}"></td>
-                <td th:text="${leave.internId}"></td>
-                <td th:text="${internIdToNameMap[leave.internId]}"></td>
-                <td th:text="${leave.leaveType}"></td>
-                <td th:text="${leave.fromDate}"></td>
-                <td th:text="${leave.toDate}"></td>
-                <td th:text="${leave.subject}"></td>
-                <td th:text="${leave.guideApproval} ? '✔️ Yes' : '❌ No'"></td>
-                <td th:text="${leave.adminApproval} ? '✔️ Yes' : '❌ No'"></td>
-                <td th:text="${leave.remarks}"></td>
-                <td th:text="${leave.status}"></td>
+              <tr th:each="intern : ${groupMembers}">
+                <td><a
+                        th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"><span
+                        th:text="${intern.internId}"></span></a></td>
+                <td th:text="${intern.firstName}"></td>
+                <td th:text="${intern.email}"></td>
+                <td th:text="${intern.contactNo}"></td>
               </tr>
               </tbody>
             </table>
-
           </div>
         </div>
+
       </div>
     </div>
   </section>
@@ -126,10 +86,9 @@
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <script>
-  $(document).ready(function() {
-    $('.table th').click(function() {
+  $(document).ready(function () {
+    $('.table th').click(function () {
       var table = $(this).parents('table').eq(0);
       var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()));
       this.asc = !this.asc;
@@ -142,9 +101,8 @@
     });
 
     function comparer(index) {
-      return function(a, b) {
-        var valA = getCellValue(a, index),
-                valB = getCellValue(b, index);
+      return function (a, b) {
+        var valA = getCellValue(a, index), valB = getCellValue(b, index);
         return $.isNumeric(valA) && $.isNumeric(valB) ? valA - valB : valA.toString().localeCompare(valB);
       };
     }
@@ -154,18 +112,17 @@
     }
   });
 </script>
-
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  document.addEventListener('DOMContentLoaded', function () {
     var searchInput = document.getElementById('searchInput');
     var tableRows = document.querySelectorAll('.table tbody tr');
 
-    searchInput.addEventListener('input', function(event) {
+    searchInput.addEventListener('input', function (event) {
       var searchText = event.target.value.toLowerCase().trim();
 
-      tableRows.forEach(function(row) {
+      tableRows.forEach(function (row) {
         var isVisible = false;
-        row.querySelectorAll('td').forEach(function(cell) {
+        row.querySelectorAll('td').forEach(function (cell) {
           var cellText = cell.textContent.toLowerCase();
           if (cellText.includes(searchText)) {
             isVisible = true;
@@ -179,4 +136,5 @@
 </script>
 
 </body>
+
 </html>
