--- a/src/main/resources/templates/admin/intern_detail.html
+++ b/src/main/resources/templates/admin/intern_detail.html
@@ -80,13 +80,8 @@
 				<tr>
 					<th>Full Name</th>
 					<td><input type="text" name="firstName"
-							   th:value="${intern.get().firstName}" class="no-border"></td>
+							   th:value="${intern.get().firstName}" class="no-border" onblur="this.value = toTitleCase(this.value)"></td>
 				</tr>
-<!--				<tr>-->
-<!--					<th>Last Name</th>-->
-<!--					<td><input type="text" name="lastName"-->
-<!--							   th:value="${intern.get().lastName}" class="no-border"></td>-->
-<!--				</tr>-->
 				<tr>
 					<th>Contact No</th>
 					<td><input type="text" name="contactNo"
@@ -107,15 +102,6 @@
 
 					</select></td>
 				</tr>
-<!--				<tr>-->
-<!--					<th>Branch</th>-->
-<!--					<td><select class="form-select" id="branch" name="branch">-->
-<!--						<option th:each="branch : ${branches}" th:text="${branch.name}"-->
-<!--								th:value="${branch.name}"-->
-<!--								th:selected="${branch.name == intern.get().branch}"></option>-->
-
-<!--					</select></td>-->
-<!--				</tr>-->
 
 				<tr>
 					<th>Domain</th>
@@ -146,7 +132,7 @@
 				<tr>
 					<th>Address</th>
 					<td><input type="text" name="permanentAddress"
-							   th:value="${intern.get().permanentAddress}" class="no-border"></td>
+							   th:value="${intern.get().permanentAddress}" class="no-border" onblur="this.value = toTitleCase(this.value)"></td>
 				</tr>
 				<tr>
 					<th>Date of Birth</th>
@@ -156,13 +142,28 @@
 				</tr>
 				<tr>
 					<th>Gender</th>
-					<td><input type="text" name="gender"
-							   th:value="${intern.get().gender}" class="no-border"></td>
+					<td>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" name="gender" id="male"
+								   value="Male" th:checked="${intern.get().gender == 'Male'}">
+							<label class="form-check-label" for="male">Male</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" name="gender" id="female"
+								   value="Female" th:checked="${intern.get().gender == 'Female'}">
+							<label class="form-check-label" for="female">Female</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" name="gender" id="other"
+								   value="Other" th:checked="${intern.get().gender == 'Other'}">
+							<label class="form-check-label" for="other">Other</label>
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<th>College Guide HOD Name</th>
 					<td><input type="text" name="collegeGuideHodName"
-							   th:value="${intern.get().collegeGuideHodName}" class="no-border"></td>
+							   th:value="${intern.get().collegeGuideHodName}" class="no-border" onblur="this.value = toTitleCase(this.value)"></td>
 				</tr>
 				<tr>
 					<th>Degree</th>
@@ -193,8 +194,17 @@
 
 				<tr>
 					<th>Used Resources</th>
-					<td><input type="text" name="usedResource"
-							   th:value="${intern.get().usedResource}" class="no-border"></td>
+					<td>
+						<label>
+							<input type="radio" name="usedResource" value="LAPTOP"
+								   th:checked="${intern.get().usedResource == 'LAPTOP'}"> LAPTOP
+						</label>
+						&nbsp;&nbsp;
+						<label>
+							<input type="radio" name="usedResource" value="BISAG-PC"
+								   th:checked="${intern.get().usedResource == 'BISAG-PC'}"> BISAG-PC
+						</label>
+					</td>
 				</tr>
 				<tr>
 					<th>College ID Image</th>
@@ -238,8 +248,11 @@
 				</tr>
 				<tr>
 					<th>Cancellation Status</th>
-					<td><input type="text" name="cancellationStatus"
-							   th:value="${intern.get().cancellationStatus != null ? intern.get().cancellationStatus : 'null'}" class="no-border" readonly></td>
+					<td>
+						<input type="text" name="cancellationStatus"
+							   th:value="${intern.get().cancellationStatus ?: '-'}"
+							   class="no-border" readonly>
+					</td>
 				</tr>
 				<tr>
 					<th>Is Active</th>
@@ -299,5 +312,12 @@
 
 	<div th:replace="fragments/footerFragment :: footer"></div>
 </main>
+<script>
+	function toTitleCase(str) {
+		return str.toLowerCase().replace(/\b\w/g, function (char) {
+			return char.toUpperCase();
+		});
+	}
+</script>
 </body>
 </html>
