--- a/src/main/resources/templates/admin/pending_leaves.html
+++ b/src/main/resources/templates/admin/pending_leaves.html
@@ -116,6 +116,7 @@
               <tr>
                 <th>ID</th>
                 <th>Intern ID</th>
+                <th>Intern Name</th>
                 <th>From Date</th>
                 <th>To Date</th>
                 <th>Subject</th>
@@ -134,6 +135,7 @@
                   </a>
                 </td>
                 <td th:text="${leave.internId}"></td>
+                <td th:text="${internNames[leave.internId]}"></td>
                 <td th:text="${#temporals.format(leave.fromDate, 'dd-MM-yyyy')}"></td>
                 <td th:text="${#temporals.format(leave.toDate, 'dd-MM-yyyy')}"></td>
                 <td th:text="${leave.subject}"></td>
