--- a/src/main/resources/templates/admin/update_guide.html
+++ b/src/main/resources/templates/admin/update_guide.html
@@ -89,7 +89,8 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="password" class="form-control" id="password" th:field="*{password}">
+                                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Enter your password">
+                                    <label for="password">Password</label>
                                 </div>
                             </div>
                             <div class="text-center">
